Add citation for original CEK paper

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -78,4 +78,11 @@
   year      = {1987},
 }
 
+@InProceedings{cek,
+  author    = {Felleisen, Matthias and Friedman, Daniel P.},
+  title     = {Control operators, the {SECD}-machine, and the lambda-calculus},
+  booktitle = {3rd Working Conference on the Formal Description of Programming Concepts},
+  year      = {1986},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
