Add more text about abstract machines -> abstract interpreters

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -706,7 +706,14 @@ $$ \text{4. } \langle v, \rho, \sigma, a \rangle \to \langle e, \rho'[x \mapsto 
 
 The CESK* machine is thus quite similar in principle to the CEK machine, but the use of a store for values and continuations allow abstract interpretation to proceed more easily.\footnote{In \cite{aam}, the authors tweak the CESK* machine to use time-stamps before they derive the abstract interpreter. For simplicity of exposition, this modification has been omitted.} The motivation is that abstract interpretation must terminate to be useful in practice. The abstract interpreter can enforce that the store is finite, so moving values and continuations to the store ensures that the interpretation will terminate, which otherwise could not be guaranteed if environments and continuations were arbitrary recursive structures unbound to any finite container.
 
-TODO: How do we get an abstract interpreter from these abstract machines?
+The way that the abstract interpreter works is by treating the store as a container for sets of values rather than single values, so that an assignment of $\lambda x.x$ to address $a$ in the store, followed by an assignment of $\lambda y.(y y)$ to the same address, would result in $a$ storing the set $\{ \lambda x.x, \lambda y.(y y) \}$ instead of the single value $\lambda y.(y y)$, as it would under regular interpretation.
+
+An abstract machine runs by iteratively applying the transition rules to yield a new state from its current state, continuing until a halting configuration is reached. At any given point, the abstract machine is in a single state. An abstract interpreter, by contrast, is in a set of states. It proceeds by applying the transition rules (modified to produce sets) to each individual state, and taking the union of the results. When this process results in the same set of states as before (i.e., when it has reached a fixed point), the interpreter terminates.
+
+The interpreter must enforce that the store is finite in order to guarantee termination. This is achieved by modified the allocator function $alloc()$ so that its co-domain is finite. One simple way to change $alloc()$ is to have it always return the same address. While this does guarantee termination and likely speeds up the abstract interpretation, it comes at the cost of precision of analysis, since all stored values in the program are treated as the same.
+
+% TODO: Needs polishing
+When the abstract interpreter has terminated, its store can be inspected to reach conclusions about the semantics of the program. For example, if every element of the set that address $a$ maps to is a negative number, then we can conclude that the variable or variables corresponding to $a$ will always be negative.
 
 
 \subsection{Abstract interpretation of Racets}
