Clean up bibliography

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -12,17 +12,20 @@
   year   = {2019},
 }
 
-@Article{faceted,
-  author  = {Austin, Thomas H. and Yang, Jean and Flanagan, Cormac},
-  title   = {Faceted execution of policy-agnostic programs},
-  journal = {PLAS '13},
-  year    = {2013},
+@InProceedings{faceted,
+  author    = {Austin, Thomas H. and Yang, Jean and Flanagan, Cormac},
+  title     = {Faceted execution of policy-agnostic programs},
+  booktitle = {Proceedings of the 8th ACM SIGPLAN Workshop on Programming Languages and Analysis for Security},
+  year      = {2013},
+  pages     = {15--26},
+  publisher = {ACM},
+  journal   = {PLAS '13},
 }
 
 @InProceedings{ai-original,
   author    = {Cousot, Patrick and Cousot, Radhia},
   title     = {Abstract interpretation: {A} unified lattice model for static analysis of programs by construction or approximation of functions},
-  booktitle = {Conference Record of the Fourth ACM Symposium on the Principles of Programming Languages},
+  booktitle = {Conference Record of the 4th ACM Symposium on the Principles of Programming Languages},
   year      = {1979},
   pages     = {238--252},
 }
@@ -40,8 +43,11 @@
 @Article{jeeves,
   author  = {Yang, Jean and Yessenov, Kuat and Solar-Lezama, Armando},
   title   = {A language for automatically enforcing privacy policies},
-  journal = {POPL '12},
+  journal = {ACM SIGPLAN Notices},
   year    = {2012},
+  volume  = {47},
+  number  = {1},
+  pages   = {85--96},
 }
 
 @Book{types,
@@ -83,6 +89,14 @@
   title     = {Control operators, the {SECD}-machine, and the lambda-calculus},
   booktitle = {3rd Working Conference on the Formal Description of Programming Concepts},
   year      = {1986},
+}
+
+@InProceedings{lang-as-lib,
+  author    = {Tobin-Hochstadt, Sam and St-Amour, Vincent and Culpepper, Ryan and Flatt, Matthew and Felleisen, Matthias},
+  title     = {Languages as libraries},
+  booktitle = {Proceedings of Conference on Programming Language Design and Implementation},
+  year      = {2011},
+  publisher = {ACM},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
