Add acknowledgements section

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -773,6 +773,11 @@ This thesis has identified three areas in which the ergonomics of faceted execut
 
 
 
+\section*{Acknowledgements}
+I would like to thank my thesis advisor, Kristopher Micinski, and my second faculty reader, Steven Lindell, for their valuable feedback and guidance on this project.
+
+
+
 \bibliography{thesis}
 
 \end{document}
